--- a/app/src/main/res/drawable/draw_chat_left3.xml
+++ b/app/src/main/res/drawable/draw_chat_left3.xml
@@ -1,5 +1,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <solid android:color="#F1EEEE" />
-    <corners android:bottomLeftRadius="5dp" android:radius="15dp" />
+    <corners android:topLeftRadius="5dp"
+        android:bottomLeftRadius="5dp"
+        android:radius="15dp" />
 </shape>
