--- a/app/src/main/res/drawable/draw_chat_rigth3.xml
+++ b/app/src/main/res/drawable/draw_chat_rigth3.xml
@@ -3,5 +3,6 @@
     <solid android:color="@color/colorPrimary" />
     <corners
         android:bottomRightRadius="5dp"
+        android:topRightRadius="5dp"
         android:radius="15dp" />
 </shape>
